# gpzip

./: Cargo.toml  README.md
bench/: README.md  bench.sh
crates/gpzip-cli/: Cargo.toml
crates/gpzip-cli/src/: app.rs  hybrid.rs  main.rs  progress.rs
crates/gpzip-codec-cpu/: Cargo.toml
crates/gpzip-codec-cpu/src/: backend.rs  compress.rs  decompress.rs  lib.rs  parallel.rs  parallel_decompress.rs  rar.rs  sevenz.rs
crates/gpzip-codec-gpu/: Cargo.toml
crates/gpzip-codec-gpu/src/: gpu.rs  lib.rs  stub.rs
crates/gpzip-codec-gpu/src/gpu/: batch.rs  chunk.rs  context.rs  deflate.rs  huffman.rs  huffman_emit.rs  huffman_emit.wgsl  huffman_emit_v2.rs  huffman_emit_v2.wgsl  identity.rs  identity.wgsl  lz77.rs  lz77.wgsl  lz77_hash.rs  lz77_hash_build.wgsl  lz77_hash_lookup.wgsl  walk.rs  walk.wgsl  walk_block.wgsl
crates/gpzip-core/: Cargo.toml
crates/gpzip-core/src/: algorithm.rs  codec.rs  error.rs  lib.rs  progress.rs  registry.rs
crates/gpzip-core/src/archive/: entry.rs  format.rs  list.rs  mod.rs  pack.rs  unpack.rs
crates/gpzip-core/tests/: roundtrip.rs
