[workspace]
resolver = "2"
members = [
    "crates/gpzip-core",
    "crates/gpzip-codec-cpu",
    "crates/gpzip-codec-gpu",
    "crates/gpzip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skmtkytr/gpzip"

[workspace.dependencies]
# core
thiserror = "2"
anyhow = "1"
bytes = "1"
crossbeam-channel = "0.5"

# archive / codec (CPU)
zip = { version = "2", default-features = false, features = ["deflate", "deflate64", "zstd", "bzip2", "lzma", "time"] }
tar = "0.4"
# zlib-rs backend: pure-Rust port of zlib-ng, ~2x faster than the
# default miniz_oxide on compression. cozip uses the same.
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
zstd = "0.13"
xz2 = "0.1"
bzip2 = "0.4"
unrar = "0.5"
sevenz-rust2 = { version = "0.21", default-features = false, features = ["bzip2"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
humansize = "2"

# Parallelism
rayon = "1"
num_cpus = "1"

# GPU
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
crc32fast = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# testing
tempfile = "3"
assert_fs = "1"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
