[package]
name = "gpzip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for gpzip"

[[bin]]
name = "gpzip"
path = "src/main.rs"

[features]
# CPU-only by default. The GPU pipeline is research-track right now —
# slower and less effective than the CPU path on every measured workload
# (see README's bench table). Disabling it by default avoids pulling in
# wgpu (~few MiB of binary, longer build, vulkan/metal/dx12 deps) for
# users who only want the fast CPU codec. Build with `--features gpu`
# to enable the GPU backend.
default = ["cpu"]
cpu = []
gpu = ["gpzip-codec-gpu/enabled"]

[dependencies]
gpzip-core = { path = "../gpzip-core" }
gpzip-codec-cpu = { path = "../gpzip-codec-cpu" }
gpzip-codec-gpu = { path = "../gpzip-codec-gpu" }
clap.workspace = true
indicatif.workspace = true
humansize.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
num_cpus.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
